--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "openai": "^4.51.0",
     "react": "^18",
     "react-dom": "^18"
   },
