--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.7.0",
