--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.24.7",
     "openai": "^4.51.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
