--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "gray-matter": "^4.0.3",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "next": "14.2.4",
@@ -19,6 +20,8 @@
     "openai": "^4.51.0",
     "react": "^18",
     "react-dom": "^18",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
